yt/twitch blacklist by ID
